name:                nopebot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/reinh/nopebot#readme
license:             BSD3
license-file:        LICENSE
author:              Rein Henrichs
maintainer:          rein.henrichs@gmail.com
copyright:           Copyright Rein Henrichs 2015
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable nopebot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nopebot
  default-language:    Haskell2010

test-suite nopebot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nopebot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/reinh/nopebot
